se agrego titulo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>DEMO GIT</title>
 </head>
 <body>
+    <h1>Welcome to the Git Demo!</h1>
+        <p>This is a simple webpage created using Git.</p>
+        <p>This change was made by John Doe.</p>
+        <p>This change was made by Jane Smith.</p>
+        <p>This change was made by Bob Johnson.</p>
+        <p>This change was made by Alice Johnson.</p>
+        <p>This change was made by Charlie Johnson.</p>
+        <p>This change was made by David Johnson.</p>
+        <p>This change was made by Emily Johnson.</p>
+        <p>This change was made by Frank Johnson.</p>
+        <p>This change was made by Greg Johnson.</p>
+        <p>This change was made by Harry Johnson.</p>
+        <p>This change was made by Ian Johnson.</p>
+        
     
 </body>
 </html>
