se modifico el titulo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DEMO GIT NEW TITLE</title>
+    <title>DEMO GIT NEW TITLE modified</title>
 </head>
 <body>
     <h1>Welcome to the Git Demo!</h1>
