Se agregó botón formulario

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <p>This change was made by Harry Johnson.</p>
         <p>This change was made by Ian Johnson.</p>
         
-    
+    <form action="#" method="get">
+
+        <input type="button" value="enviar">
+    </form>
 </body>
 </html>
